--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.1.6
+# Messages Bundle for LimeWire 4.1.19
 # Specialization for: Dutch - Netherlands, Belgium
 # Thanks to: Willem Broekema, Edwin van Ouwerkerk Moria, Reinier Bergwerf
 ################################################################################
@@ -34,6 +34,7 @@ HAS_TIPS_OF_THE_DAY=false
 ################################################################################
 # Keys/value pairs for general strings that can be used in any components
 ################################################################################
+NO_TEXT=
 GENERAL_OK_BUTTON_LABEL=OK
 GENERAL_OK_BUTTON_TIP=Voer de actie uit.
 GENERAL_CANCEL_BUTTON_LABEL=Annuleren
@@ -57,9 +58,9 @@ OPTIONS_BUTTONS_CANCEL_LABEL=Annuleren
 OPTIONS_BUTTONS_CANCEL_TIP=Annuleer de gemaakte wijzigingen.
 OPTIONS_BUTTONS_APPLY_LABEL=Activeren
 OPTIONS_BUTTONS_APPLY_TIP=Activeer de wijzigingen.
-#??? OPTIONS_RESTART_REQUIRED=One or more options will take effect the next time LimeWire is restarted.
-#??? OPTIONS_BUTTON_REVERT_TO_DEFAULT=Restore defaults
-#??? OPTIONS_BUTTON_REVERT_TO_DEFAULT_TIP=Revert all settings to the factory defaults.
+OPTIONS_RESTART_REQUIRED=Een of meerdere opties zullen pas effect hebben na een heropstart van LimeWire.
+OPTIONS_BUTTON_REVERT_TO_DEFAULT=Herstel standaard waardes.
+OPTIONS_BUTTON_REVERT_TO_DEFAULT_TIP=Herstelt all waardes terug naar fabrieksinstellingen.
 
 ################################################################################
 # Key/value pairs for general terms, such as "yes" and "no"
@@ -70,14 +71,14 @@ NO=Nee
 ################################################################################
 # Key/value pairs for general informative terms
 ################################################################################
-#??? GENERAL_AVERAGE_BANDWIDTH=Average bandwidth
-#??? GENERAL_ALTERNATE_LOCATIONS=Valid alternate locations
-#??? GENERAL_INVALID_ALTERNATE_LOCATIONS=Invalid alternate locations
-#??? GENERAL_STARTED_ON=Started on 
-#??? GENERAL_FINISHED_ON=Finished on 
-#??? GENERAL_TIME_SPENT=Time spent
-#??? GENERAL_REVERT_TO_DEFAULT=Revert to default
-#??? GENERAL_MORE_OPTIONS=More options
+GENERAL_AVERAGE_BANDWIDTH=Gemiddelde bandbreete
+GENERAL_ALTERNATE_LOCATIONS=Geldige alternatieve locaties
+GENERAL_INVALID_ALTERNATE_LOCATIONS=Ongeldige alternatieve locaties
+GENERAL_STARTED_ON=Gestart op 
+GENERAL_FINISHED_ON=Geëindigd op 
+GENERAL_TIME_SPENT=Verbruikte tijd
+GENERAL_REVERT_TO_DEFAULT=Herstel standaard waardes
+GENERAL_MORE_OPTIONS=Meer opties
 
 # StatusLine, Statistics and GUIUtils
 GENERAL_UNIT_TERABYTES=TB
@@ -101,7 +102,7 @@ ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
 ABOUT_LABEL_TITLE=Over LimeWire
 #??? ABOUT_CREDITS_LABEL=Credits
 #??? ABOUT_CREDITS_TIP=Display credits information about LimeWire.
-#??? ABOUT_NOTICE_LABEL=Notice
+ABOUT_NOTICE_LABEL=Licentie
 #??? ABOUT_NOTICE_TIP=Display distribution and contact information.
 #??? ABOUT_LICENSE_LABEL=License
 #??? ABOUT_LICENSE_TIP=Display the license agreement about this software.
@@ -114,23 +115,23 @@ ABOUT_BUTTON_TIP=Sluit dit venster.
 ###################################################################
 # Key/value pairs for the tip of the day window (not the tips themselves)
 ###################################################################
-#??? TOTD_TITLE=Tip of the day
-#??? TOTD_INTRODUCTION=Did you know...
-#??? TOTD_SHOW_AT_STARTUP=Show tips at startup
-#??? TOTD_NEXT=Next tip
-#??? TOTD_PREVIOUS=Previous tip
+TOTD_TITLE=Tip van de dag
+TOTD_INTRODUCTION=Wist je dat...
+TOTD_SHOW_AT_STARTUP=Laat tips zien bij opstarten
+TOTD_NEXT=Volgende tip
+TOTD_PREVIOUS=Vorige tip
 TOTD_CLOSE=Sluiten
 
 ###################################################################
 # Key/value pairs for the Getting Started image
 ###################################################################
 #??? GETTING_STARTED_TITLE=Getting started
-#??? GETTING_STARTED_CONTENTS=To start using LimeWire, find the text field on the left, type in what you are looking for and click the "Search" button. If you are looking for only one type of content (music, video, etc...), you can narrow your search results by using the buttons above the text field.
+GETTING_STARTED_CONTENTS=Om LimeWire te gebruiken, zoek de tekst veld aan de linker kant, toets in wat je wilt zoeken en klik dan op "Zoeken". Als je op zoek bent naar iets specifieks zo als (muziek, video, enz...), dan kan je de zoek resultaten specifiek bepalen door gebruik te maken van de knoppen boven de tekst veld.
 
 ###################################################################
 # Key/value pairs for the Going Pro image.
 ###################################################################
-#??? GOING_PRO_TITLE=The most advanced file sharing program on the planet!
+GOING_PRO_TITLE=De meest geavanceerde bestanden delen programma op de planeet!
 #??? GOING_PRO_DESCRIPTION=Better search results\nTurbo charged download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
 
 ###################################################################
@@ -221,13 +222,13 @@ MENU_NAV_LIB_ACCESSIBLE=Ga naar het 'Mediatheek'-scherm.
 MENU_VIEW_TITLE=Visualiseren
 MENU_VIEW_TITLE_MNEMONIC=V
 MENU_VIEW_SMALL_ICONS=Kleine icoonen
-#??? MENU_VIEW_SMALL_ICONS_MNEMONIC=S
-#??? MENU_VIEW_SMALL_ICONS_ACCESSIBLE=Use small icons.
-#??? MENU_VIEW_TEXT_WITH_ICONS=Icon text
-#??? MENU_VIEW_TEXT_WITH_ICONS_MNEMONIC=T
-#??? MENU_VIEW_TEXT_WITH_ICONS_ACCESSIBLE=Show text below icons.
-#??? MENU_VIEW_SHOW_HIDE_TITLE=Show/Hide
-#??? MENU_VIEW_SHOW_HIDE_TITLE_MNEMONIC=W
+MENU_VIEW_SMALL_ICONS_MNEMONIC=K
+MENU_VIEW_SMALL_ICONS_ACCESSIBLE=Gebruik kleine icoontjes.
+MENU_VIEW_TEXT_WITH_ICONS=Icoon tekst
+MENU_VIEW_TEXT_WITH_ICONS_MNEMONIC=T
+MENU_VIEW_TEXT_WITH_ICONS_ACCESSIBLE=Laat de tekst onder de iconen zien.
+MENU_VIEW_SHOW_HIDE_TITLE=Laat zien/Verberg
+MENU_VIEW_SHOW_HIDE_TITLE_MNEMONIC=L
 #??? MENU_VIEW_SHOW_HIDE_ACCESSIBLE=Show or hide individual tabs.
 MENU_VIEW_MONITOR=Overzicht
 MENU_VIEW_MONITOR_MNEMONIC=O
@@ -254,16 +255,16 @@ MENU_VIEW_LIBRARY_ACCESSIBLE=Zet het 'Mediatheek'-scherm aan.
 #??? MENU_VIEW_LANGS_RESTART_REQUIRED=LimeWire must be restarted for the new language to take effect.
 #??? MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE=Help translate LimeWire
 #??? MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE_MNEMONIC=T
-#??? MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE_ACCESSIBLE=Help translate LimeWire into your language.
+MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE_ACCESSIBLE=Help LimeWire vertalen naar je eigen taal.
 MENU_VIEW_SEARCH_TITLE=Zoeken
 MENU_VIEW_SEARCH_TITLE_MNEMONIC=Z
-#??? MENU_VIEW_SEARCH_ACCESSIBLE=Search tab options.
-#??? MENU_VIEW_SEARCH_FILTERS=Result filters
-#??? MENU_VIEW_SEARCH_FILTERS_MNEMONIC=F
-#??? MENU_VIEW_SEARCH_FILTERS_ACCESSIBLE=Show search result filters.
+MENU_VIEW_SEARCH_ACCESSIBLE=Zoek tab opties.
+MENU_VIEW_SEARCH_FILTERS=Resultaat filters.
+MENU_VIEW_SEARCH_FILTERS_MNEMONIC=F
+MENU_VIEW_SEARCH_FILTERS_ACCESSIBLE=Laat de filters van de zoek resultaten zien.
 MENU_VIEW_SEARCH_MAGNETMIX=MagnetMix
 MENU_VIEW_SEARCH_MAGNETMIX_MNEMONIC=M
-#??? MENU_VIEW_SEARCH_MAGNETMIX_ACCESSIBLE=Show the Magnetmix button.
+MENU_VIEW_SEARCH_MAGNETMIX_ACCESSIBLE=Laat de Magnetmix knop zien.
 
 MENU_RESOURCES_TITLE=Bronnen
 MENU_RESOURCES_TITLE_MNEMONIC=R
@@ -311,13 +312,14 @@ MENU_HELP_ABOUT_ACCESSIBLE=Informatie over LimeWire.
 # Keys/value pairs for general tables info
 ################################################################################
 #??? TABLES_USE_ROWSTRIPE=Stripe Rows
-#??? TABLES_REAL_TIME_SORTING=Sort Automatically
+TABLES_REAL_TIME_SORTING=Automatisch sorteren
 #??? TABLES_DISPLAY_TOOLTIPS=Extended Tooltips
 
 ################################################################################
 # Keys/value pairs for SearchView stuff...
 ################################################################################
-#??? SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu.
+SEARCH_NOT_CONNECTED=Je bent niet verbonden met het netwerk. Om te verbinden, selecteer "Verbinden" uit de "Bestand" menu.
+#??? SEARCH_STILL_CONNECTING=LimeWire is currently connecting to the network. Your search may not return many results until you are fully connected to the network.
 SEARCH_DOWNLOAD_BUTTON_LABEL=Downloaden
 SEARCH_DOWNLOAD_BUTTON_TIP=Download een van de geselecteerde bestanden.
 SEARCH_WISHLIST_BUTTON_LABEL=Aan verlanglijstje
@@ -395,7 +397,7 @@ RESULT_PANEL_VENDOR=Programma
 SEARCH_FILTER_ALL=All
 SEARCH_FILTER_OPTION=Optie
 SEARCH_FILTER_OPTIONS=Opties
-#?? SEARCH_FILTER_MEDIA=Media
+SEARCH_FILTER_MEDIA=Media
 
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Voorbeeld
 #??? DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the selected download.
@@ -407,6 +409,8 @@ DOWNLOAD_RESUME_BUTTON_TIP=Probeer download te hervatten.
 #??? DOWNLOAD_SOURCES_BUTTON_TIP=Try to locate other sources for failed download.
 DOWNLOAD_CLEAR_BUTTON_LABEL=Wis inactief
 DOWNLOAD_CLEAR_BUTTON_TIP=Verwijder inactieve downloads uit het overzicht.
+DOWNLOAD_PAUSE_BUTTON_LABEL=Onderbreek
+#??? DOWNLOAD_PAUSE_BUTTON_TIP=Pause the selected downloads.
 
 LIBRARY_LAUNCH_BUTTON_LABEL=Afspelen
 LIBRARY_LAUNCH_BUTTON_TIP=Speel geselecteerde bestand af.
@@ -481,6 +485,7 @@ DOWNLOAD_POPUP_MENU_RESUME=Hervat
 DOWNLOAD_POPUP_MENU_LAUNCH=Speel af
 DOWNLOAD_POPUP_MENU_CHAT=Chat met gebruiker
 DOWNLOAD_POPUP_MENU_BROWSE=Bestandsoverzicht gebruiker
+#??? DOWNLOAD_PRIORITY_COLUMN=Priority
 DOWNLOAD_NAME_COLUMN=Naam
 DOWNLOAD_SIZE_COLUMN=Grootte
 DOWNLOAD_STATUS_COLUMN=Status
@@ -510,6 +515,8 @@ DOWNLOAD_HOST_LABEL=gebruiker
 DOWNLOAD_STATUS_REMOTE_QUEUED=In de wachtrij gezet bij
 #??? DOWNLOAD_STATUS_HASHING=Verifying File Contents...
 #??? DOWNLOAD_STATUS_SAVING=Saving File...
+#??? DOWNLOAD_STATUS_PAUSING=Pausing...
+#??? DOWNLOAD_STATUS_PAUSED=Paused
 #??? DOWNLOAD_AWAITING_SOURCES=A more specific search may be required...
 #??? DOWNLOAD_APPLY_NEW_THEME_START=You have downloaded a new skin titled "
 #??? DOWNLOAD_APPLY_NEW_THEME_END=." Would you like to use this new skin?
@@ -521,6 +528,11 @@ DOWNLOAD_STATUS_REMOTE_QUEUED=In de wachtrij gezet bij
 #??? DOWNLOAD_MAGNET_DIALOG=Would you like to download
 #??? DOWNLOAD_FROM=from
 #??? DOWNLOAD_MAGNET_DIALOG_END=?
+#??? DOWNLOAD_HASH_ONLY_MAGNET=LimeWire will not be able to start the download you have selected unless you start a search for it.
+#??? DOWNLOAD_PRIORITY_ACTIVE=Active
+#??? DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Move the selected download closer to becoming active
+#??? DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Move the selected download further from becoming active
+#??? DOWNLOAD_PRIORITY_PRIORITIZE=Queue
 
 ###################################################################
 # Key/value pairs for UploadView
@@ -668,6 +680,8 @@ PLAYLIST_DIALOG_SAVE_SAVE=Opslaan
 #??? PLAYLIST_LINE_UNAVAILABLE=. No line is available for output.
 #??? PLAYLIST_FILE_MISSING=. The file cannot be found.
 #??? PLAYLIST_FILE_CORRUPT=. The file is corrupt.
+#??? PLAYLIST_FILE_UNKNOWN=. There is an unknown error with the audio file.
+#??? PLAYLIST_FILE_PARSE_PROBLEM=. The file cannot be parsed.
 
 ################################################################################
 # Key/value pairs for the LimeWire initialization wizard that is run
@@ -1438,7 +1452,6 @@ OPTIONS_CONNECT_PREF_SLIDER_MAX_LABEL=Altijd
 #??? OPTIONS_CONNECT_LOCALE_PREF_TITLE=Locale preferencing
 #??? OPTIONS_CONNECT_LOCALE_PREF_LABEL=You can choose to preference connections that are advertising the same locale as you are. Choosing a large number of connection to preference may cause your client to take a long time to connect to the network.
 #??? OPTIONS_CONNECT_LOCALE_PREF_DISPLAY_CHECK_BOX_LABEL=Turn preferencing on:
-#??? OPTIONS_CONNECT_LOCALE_PREF_NUM_LABEL=Number of connections to preference
 
 ################################################################################
 # Key/Value pairs for the options for setting the listening port
