--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -474,6 +474,8 @@ STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=You can experience TurboCharged con
 STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Your connection to the network is extremely strong.
 STATISTICS_CONNECTION_QUALITY=Quality:
 STATISTICS_CONNECTION_IDLE=Idle
+STATISTICS_CONNECTION_WAKING_UP=Waking Up
+STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
 
 ################################################################################
 # Key/value pairs for the download window, including labels for the
