change LanguageUpdater to always print out the English version of a resource, to help translators.  clean up some oddness with MessageBundles and spaces & about file names, etc..

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -32,9 +32,14 @@ LAYOUT_RIGHT_TO_LEFT=false
 HAS_TIPS_OF_THE_DAY=false
 
 ################################################################################
+################################################################################
+# TRANSLATIONS START BELOW.
+################################################################################
+################################################################################
+
+################################################################################
 # Keys/value pairs for general strings that can be used in any components
 ################################################################################
-NO_TEXT=
 GENERAL_OK_BUTTON_LABEL=OK
 GENERAL_OK_BUTTON_TIP=Apply Operation.
 GENERAL_CANCEL_BUTTON_LABEL=Cancel
@@ -109,8 +114,6 @@ ABOUT_LICENSE_TIP=Display the license agreement about this software.
 ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
 ABOUT_BUTTON_LABEL=OK
 ABOUT_BUTTON_TIP=Close the About Window
-#Do not uncomment the following line without providing a translated HTML file!
-ABOUT_FILE_NAME=about.html
 
 ###################################################################
 # Key/value pairs for the tip of the day window (not the tips themselves)
@@ -596,8 +599,7 @@ MULTICAST_SPEED=Ethernet
 # HTML Page stuff
 ################################################################################
 HTML_PAGE_TITLE=Download Page
-# SPACE AT END NEEDS TO BE THERE!!!
-HTML_PAGE_LISTING=File Listing for 
+HTML_PAGE_LISTING=File Listing for
 HTML_PAGE_MAGNET=Magnet Links for Fast Downloads (if you have LimeWire installed)
 
 ###################################################################
