do not write out the non-translated value twice.

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -359,17 +359,17 @@ MENU_VIEW_TITLE=Ver
 #### MENU_VIEW_TITLE_MNEMONIC=V
 MENU_VIEW_TITLE_MNEMONIC=V
 #### MENU_VIEW_SMALL_ICONS=Use Small Icons
-#? MENU_VIEW_SMALL_ICONS=Use Small Icons
+#? MENU_VIEW_SMALL_ICONS=
 #### MENU_VIEW_SMALL_ICONS_MNEMONIC=S
-#? MENU_VIEW_SMALL_ICONS_MNEMONIC=S
+#? MENU_VIEW_SMALL_ICONS_MNEMONIC=
 #### MENU_VIEW_SMALL_ICONS_ACCESSIBLE=Use Small Icons
-#? MENU_VIEW_SMALL_ICONS_ACCESSIBLE=Use Small Icons
+#? MENU_VIEW_SMALL_ICONS_ACCESSIBLE=
 #### MENU_VIEW_TEXT_WITH_ICONS=Show Icon Text
-#? MENU_VIEW_TEXT_WITH_ICONS=Show Icon Text
+#? MENU_VIEW_TEXT_WITH_ICONS=
 #### MENU_VIEW_TEXT_WITH_ICONS_MNEMONIC=T
-#? MENU_VIEW_TEXT_WITH_ICONS_MNEMONIC=T
+#? MENU_VIEW_TEXT_WITH_ICONS_MNEMONIC=
 #### MENU_VIEW_TEXT_WITH_ICONS_ACCESSIBLE=Show Text Below Icons
-#? MENU_VIEW_TEXT_WITH_ICONS_ACCESSIBLE=Show Text Below Icons
+#? MENU_VIEW_TEXT_WITH_ICONS_ACCESSIBLE=
 #### MENU_VIEW_SHOW_HIDE_TITLE=Show/Hide
 MENU_VIEW_SHOW_HIDE_TITLE=Mostrar/Ocultar
 #### MENU_VIEW_SHOW_HIDE_TITLE_MNEMONIC=W
@@ -405,7 +405,7 @@ MENU_VIEW_THEMES_GET_MORE_MNEMONIC=B
 #### MENU_VIEW_THEMES_GET_MORE_ACCESSIBLE=Find more skins from limewire.com
 MENU_VIEW_THEMES_GET_MORE_ACCESSIBLE=Encontrar más carátulas en limewire.com.
 #### MENU_VIEW_THEMES_REFRESH=Refresh Skins
-#? MENU_VIEW_THEMES_REFRESH=Refresh Skins
+#? MENU_VIEW_THEMES_REFRESH=
 #### MENU_VIEW_THEMES_REFRESH_MNEMONIC=R
 MENU_VIEW_THEMES_REFRESH_MNEMONIC=T
 #### MENU_VIEW_THEMES_REFRESH_ACCESSIBLE=Reload available skins from disk
@@ -423,11 +423,11 @@ MENU_VIEW_LANGS_TITLE_MNEMONIC=I
 #### MENU_VIEW_LANGS_RESTART_REQUIRED=LimeWire must be restarted for the new language to take effect.
 MENU_VIEW_LANGS_RESTART_REQUIRED=Debe reiniciar LimeWire para que tenga efecto el nuevo idioma.
 #### MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE=Help Translate LimeWire
-#? MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE=Help Translate LimeWire
+#? MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE=
 #### MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE_MNEMONIC=T
-#? MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE_MNEMONIC=T
+#? MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE_MNEMONIC=
 #### MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE_ACCESSIBLE=Help translate LimeWire into your language
-#? MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE_ACCESSIBLE=Help translate LimeWire into your language
+#? MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE_ACCESSIBLE=
 #### MENU_VIEW_SEARCH_TITLE=Search
 MENU_VIEW_SEARCH_TITLE=Buscar
 #### MENU_VIEW_SEARCH_TITLE_MNEMONIC=S
@@ -544,7 +544,7 @@ TABLES_DISPLAY_TOOLTIPS=Indicadores de funciones ampliados
 #### SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu. Your search may not return any results until you connect.
 SEARCH_NOT_CONNECTED=No está conectado a la red. Para conectarse, seleccione "conectar" desde el menú "archivo".
 #### SEARCH_STILL_CONNECTING=LimeWire is currently connecting to the network. Your search may not return many results until you are fully connected to the network.
-#? SEARCH_STILL_CONNECTING=LimeWire is currently connecting to the network. Your search may not return many results until you are fully connected to the network.
+#? SEARCH_STILL_CONNECTING=
 #### SEARCH_DOWNLOAD_BUTTON_LABEL=Download
 SEARCH_DOWNLOAD_BUTTON_LABEL=Descargar
 #### SEARCH_DOWNLOAD_BUTTON_TIP=Download All Selected Files
@@ -586,9 +586,9 @@ SEARCH_PUBLIC_CHAT_STRING=Chat con computadora central
 #### SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Bitzi Web Lookup...
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Búsqueda en Bitzi Web...
 #### SEARCH_PUBLIC_MAGNET_LOOKUP_STRING=Magnet details for file
-#? SEARCH_PUBLIC_MAGNET_LOOKUP_STRING=Magnet details for file
+#? SEARCH_PUBLIC_MAGNET_LOOKUP_STRING=
 #### SEARCH_PUBLIC_HTTP_PAGE_STRING=Web page for file(s)
-#? SEARCH_PUBLIC_HTTP_PAGE_STRING=Web page for file(s)
+#? SEARCH_PUBLIC_HTTP_PAGE_STRING=
 #### SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Repeat Search
 SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Repetir búsqueda
 #### SEARCH_PUBLIC_BLOCK_STRING=Block Host
@@ -626,7 +626,7 @@ SEARCH_BROWSEHOST_TITLE=¿Tiene amigos?
 #### SEARCH_BROWSEHOST_DESC=Enter the IP address of a friend you'd like to connect to, click 'Direct Connect', and LimeWire will try to browse the files of that user.
 SEARCH_BROWSEHOST_DESC=Ingrese la dirección IP de un amigo a quien desea conectarse, haga clic en 'conexión directa' y LimeWire intentará buscar los archivos de dicho usuario.
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
-#? SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
+#? SEARCH_BROWSEHOST_MYIP=
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
 SEARCH_BROWSEHOST_BUTTON=Conexión directa
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
@@ -684,7 +684,7 @@ RESULT_PANEL_COUNT=Nº
 #### RESULT_PANEL_VENDOR=Vendor
 RESULT_PANEL_VENDOR=Proveedor
 #### RESULT_PANEL_ADDED=Created
-#? RESULT_PANEL_ADDED=Created
+#? RESULT_PANEL_ADDED=
 
 #Filter labels.
 #### SEARCH_FILTER_ALL=All
@@ -833,11 +833,11 @@ STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Su conexión a la red es excelente.
 #### STATISTICS_CONNECTION_QUALITY=Quality:
 STATISTICS_CONNECTION_QUALITY=Calidad:
 #### STATISTICS_CONNECTION_IDLE=Idle
-#? STATISTICS_CONNECTION_IDLE=Idle
+#? STATISTICS_CONNECTION_IDLE=
 #### STATISTICS_CONNECTION_WAKING_UP=Waking Up
-#? STATISTICS_CONNECTION_WAKING_UP=Waking Up
+#? STATISTICS_CONNECTION_WAKING_UP=
 #### STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
-#? STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
+#? STATISTICS_CONNECTION_WAKING_UP_TIP=
 
 ################################################################################
 # Key/value pairs for the download window, including labels for the
@@ -855,7 +855,7 @@ DOWNLOAD_POPUP_MENU_CHAT=Chat con la computadora central
 #### DOWNLOAD_POPUP_MENU_BROWSE=Browse Host
 DOWNLOAD_POPUP_MENU_BROWSE=Computadora central de búsqueda
 #### DOWNLOAD_PRIORITY_COLUMN=Priority
-#? DOWNLOAD_PRIORITY_COLUMN=Priority
+#? DOWNLOAD_PRIORITY_COLUMN=
 #### DOWNLOAD_NAME_COLUMN=Name
 DOWNLOAD_NAME_COLUMN=Nombre
 #### DOWNLOAD_SIZE_COLUMN=Size
@@ -941,13 +941,13 @@ DOWNLOAD_FROM=desde
 #### DOWNLOAD_MAGNET_DIALOG_END=?
 DOWNLOAD_MAGNET_DIALOG_END=?
 #### DOWNLOAD_HASH_ONLY_MAGNET=LimeWire will not be able to start the download you have selected unless you start a search for it.
-#? DOWNLOAD_HASH_ONLY_MAGNET=LimeWire will not be able to start the download you have selected unless you start a search for it.
+#? DOWNLOAD_HASH_ONLY_MAGNET=
 #### DOWNLOAD_PRIORITY_ACTIVE=Active
 DOWNLOAD_PRIORITY_ACTIVE=Activo
 #### DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Move the selected download closer to becoming active
-#? DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Move the selected download closer to becoming active
+#? DOWNLOAD_PRIORITY_UP_BUTTON_TIP=
 #### DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Move the selected download further from becoming active
-#? DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Move the selected download further from becoming active
+#? DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=
 #### DOWNLOAD_PRIORITY_PRIORITIZE=Queue
 DOWNLOAD_PRIORITY_PRIORITIZE=En cola
 
@@ -1054,11 +1054,11 @@ MULTICAST_SPEED=Ethernet
 # HTML Page stuff
 ################################################################################
 #### HTML_PAGE_TITLE=Download Page
-#? HTML_PAGE_TITLE=Download Page
+#? HTML_PAGE_TITLE=
 #### HTML_PAGE_LISTING=File Listing for
-#? HTML_PAGE_LISTING=File Listing for
+#? HTML_PAGE_LISTING=
 #### HTML_PAGE_MAGNET=Magnet Links for Fast Downloads (if you have LimeWire installed)
-#? HTML_PAGE_MAGNET=Magnet Links for Fast Downloads (if you have LimeWire installed)
+#? HTML_PAGE_MAGNET=
 
 ###################################################################
 # Key/value pairs for ConnectionView
@@ -1088,7 +1088,7 @@ CV_COLUMN_COMPRESSION=Comprimido (E/S)
 #### CV_COLUMN_QRP_FULL=QRP (%)
 CV_COLUMN_QRP_FULL=Baja potencia (%)
 #### CV_COLUMN_QRP_USED=QRP Empty
-#? CV_COLUMN_QRP_USED=QRP Empty
+#? CV_COLUMN_QRP_USED=
 #### CV_BUTTON_REMOVE=Remove
 CV_BUTTON_REMOVE=Quitar
 #### CV_BUTTON_TOOLTIP_REMOVE=Remove the selected connections
@@ -1166,9 +1166,9 @@ LIBRARY_TREE_RENAME_FOLDER_LABEL=Cambiar nombre
 #### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To PlayList
 LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=Ir a la lista de reproducción
 #### LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
-#? LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
+#? LIBRARY_TREE_SAVED_DIRECTORY=
 #### LIBRARY_TREE_INCOMPLETE_DIRECTORY=Incomplete Files
-#? LIBRARY_TREE_INCOMPLETE_DIRECTORY=Incomplete Files
+#? LIBRARY_TREE_INCOMPLETE_DIRECTORY=
 
 ################################################################################
 # Key/value pairs for burn cd link
@@ -1210,9 +1210,9 @@ PLAYLIST_FILE_MISSING=. No se puede encontrar el archivo.
 #### PLAYLIST_FILE_CORRUPT=. The file is corrupt.
 PLAYLIST_FILE_CORRUPT=. El archivo tiene fallas.
 #### PLAYLIST_FILE_UNKNOWN=. There is an unknown error with the audio file.
-#? PLAYLIST_FILE_UNKNOWN=. There is an unknown error with the audio file.
+#? PLAYLIST_FILE_UNKNOWN=
 #### PLAYLIST_FILE_PARSE_PROBLEM=. The file cannot be parsed.
-#? PLAYLIST_FILE_PARSE_PROBLEM=. The file cannot be parsed.
+#? PLAYLIST_FILE_PARSE_PROBLEM=
 
 ################################################################################
 # Key/value pairs for the LimeWire initialization wizard that is run
@@ -1349,50 +1349,50 @@ VIEW_CHOOSER_CANCEL_BUTTON_LABEL=Cancelar
 XML_SEARCH_MORE_OPTIONS_LABEL=Más opciones de búsqueda
 
 #### META_EDITOR_INFO_TAB_LABEL=Info
-#? META_EDITOR_INFO_TAB_LABEL=Info
+#? META_EDITOR_INFO_TAB_LABEL=
 #### META_EDITOR_OK_BUTTON_LABEL=OK
 META_EDITOR_OK_BUTTON_LABEL=OK
 #### META_EDITOR_CANCEL_BUTTON_LABEL=Cancel
 META_EDITOR_CANCEL_BUTTON_LABEL=Cancelar
 #### META_EDITOR_ADVANCED_BUTTON_LABEL=Advanced
-#? META_EDITOR_ADVANCED_BUTTON_LABEL=Advanced
+#? META_EDITOR_ADVANCED_BUTTON_LABEL=
 #### META_EDITOR_RESET_LABEL=Reset
-#? META_EDITOR_RESET_LABEL=Reset
+#? META_EDITOR_RESET_LABEL=
 
 #### META_EDITOR_AUDIO_LABEL=Audio
-#? META_EDITOR_AUDIO_LABEL=Audio
+#? META_EDITOR_AUDIO_LABEL=
 #### META_EDITOR_TITLE_LABEL=Title:
-#? META_EDITOR_TITLE_LABEL=Title:
+#? META_EDITOR_TITLE_LABEL=
 #### META_EDITOR_ARTIST_LABEL=Artist:
-#? META_EDITOR_ARTIST_LABEL=Artist:
+#? META_EDITOR_ARTIST_LABEL=
 #### META_EDITOR_ALBUM_LABEL=Album:
-#? META_EDITOR_ALBUM_LABEL=Album:
+#? META_EDITOR_ALBUM_LABEL=
 #### META_EDITOR_GENRE_LABEL=Genre:
-#? META_EDITOR_GENRE_LABEL=Genre:
+#? META_EDITOR_GENRE_LABEL=
 #### META_EDITOR_YEAR_LABEL=Year:
-#? META_EDITOR_YEAR_LABEL=Year:
+#? META_EDITOR_YEAR_LABEL=
 #### META_EDITOR_TYPE_LABEL=Type:
-#? META_EDITOR_TYPE_LABEL=Type:
+#? META_EDITOR_TYPE_LABEL=
 #### META_EDITOR_TRACK_LABEL=Track:
-#? META_EDITOR_TRACK_LABEL=Track:
+#? META_EDITOR_TRACK_LABEL=
 #### META_EDITOR_LANGUAGE_LABEL=Language:
-#? META_EDITOR_LANGUAGE_LABEL=Language:
+#? META_EDITOR_LANGUAGE_LABEL=
 #### META_EDITOR_SECONDS_LABEL=Length:
-#? META_EDITOR_SECONDS_LABEL=Length:
+#? META_EDITOR_SECONDS_LABEL=
 #### META_EDITOR_BITRATE_LABEL=Bitrate:
-#? META_EDITOR_BITRATE_LABEL=Bitrate:
+#? META_EDITOR_BITRATE_LABEL=
 #### META_EDITOR_COMMENTS_LABEL=Comments:
-#? META_EDITOR_COMMENTS_LABEL=Comments:
+#? META_EDITOR_COMMENTS_LABEL=
 #### META_EDITOR_SHA1_LABEL=SHA1:
-#? META_EDITOR_SHA1_LABEL=SHA1:
+#? META_EDITOR_SHA1_LABEL=
 #### META_EDITOR_PRICE_LABEL=Price:
-#? META_EDITOR_PRICE_LABEL=Price:
+#? META_EDITOR_PRICE_LABEL=
 #### META_EDITOR_LINK_LABEL=Link:
-#? META_EDITOR_LINK_LABEL=Link:
+#? META_EDITOR_LINK_LABEL=
 #### META_EDITOR_ACTION_LABEL=Action:
-#? META_EDITOR_ACTION_LABEL=Action:
+#? META_EDITOR_ACTION_LABEL=
 #### META_EDITOR_STARS_LABEL=Stars:
-#? META_EDITOR_STARS_LABEL=Stars:
+#? META_EDITOR_STARS_LABEL=
 
 #### META_EDITOR_SIZE_LABEL=Size:
 META_EDITOR_SIZE_LABEL=Size:
@@ -1539,7 +1539,7 @@ SPLASH_STATUS_COMPONENT_LOADING_CONNECTION_WATCHDOG=Cargando gestión de conexión
 #### SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=Loading saved files...
 SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=Cargando archivos guardados...
 #### SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=Loading secure settings...
-#? SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=Loading secure settings...
+#? SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=
 
 ##################################################################
 # Key/value pairs for the message displayed to prompt users to
@@ -1732,9 +1732,9 @@ ERROR_INTERNAL_SERVLET_FAILED=LimeWire no pudo conectarse al servidor de errores
 # Key/Value pairs for error messages
 ################################################################################
 #### ERROR_DAAP_START_FAILED=LimeWire was unable to start the Digital Audio Access Protocol Service (for sharing files in iTunes). This feature will be turned off. You can turn it back on in options, under iTunes -> Sharing.
-#? ERROR_DAAP_START_FAILED=LimeWire was unable to start the Digital Audio Access Protocol Service (for sharing files in iTunes). This feature will be turned off. You can turn it back on in options, under iTunes -> Sharing.
+#? ERROR_DAAP_START_FAILED=
 #### ERROR_DAAP_RUN_ERROR=LimeWire encountered an error in the Digital Audio Access Protocol (for sharing files in iTunes). This feature will be turned off. You can turn it back on in options, under iTunes -> Sharing.
-#? ERROR_DAAP_RUN_ERROR=LimeWire encountered an error in the Digital Audio Access Protocol (for sharing files in iTunes). This feature will be turned off. You can turn it back on in options, under iTunes -> Sharing.
+#? ERROR_DAAP_RUN_ERROR=
 #### ERROR_NO_PORTS_AVAILABLE=LimeWire was unable to set up a port to listen for incoming connections. Some features of LimeWire may not work as expected.
 ERROR_NO_PORTS_AVAILABLE=LimeWire no pudo configurar un puerto para escuchar las conexiones entrantes. Es posible que algunas funciones de LimeWire no funcionen correctamente.
 #### ERROR_PORT_UNAVAILABLE=Port not available. Please select a different port.
@@ -1822,7 +1822,7 @@ ERROR_BROWSE_HOST_FAILED_BEGIN_KEY=No se puede navegar por la computadora centra
 #### ERROR_BROWSE_HOST_FAILED_END_KEY=.
 ERROR_BROWSE_HOST_FAILED_END_KEY=.
 #### ERROR_APPLYING_INVALID_THEME_FILE=The theme you are applying is invalid. LimeWire will revert to the default theme.
-#? ERROR_APPLYING_INVALID_THEME_FILE=The theme you are applying is invalid. LimeWire will revert to the default theme.
+#? ERROR_APPLYING_INVALID_THEME_FILE=
 #### ERROR_INVALID_THEME_FILE=The skin file you selected does not exist or is invalid. Please choose another file, or use the default.
 ERROR_INVALID_THEME_FILE=El archivo de carátula que seleccionó no existe o no es válido. Por favor, elija otro archivo o utilice el predeterminado.
 #### ERROR_THEME_OUT_OF_DATE=The skin you selected is out of date. Please download the latest version of the skin.
@@ -1846,9 +1846,9 @@ ERROR_ITUNES_INTEGRATION=Se ha producido un error con la integración de iTunes d
 #### ERROR_PROPS_CORRUPTED=A file used to save your preferences was corrupted. LimeWire will use default values.
 ERROR_PROPS_CORRUPTED=Un archivo utilizado para guardar sus preferencias contiene fallas. LimeWire utilizará los valores predeterminados.
 #### ERROR_SEARCH_TOO_LARGE=Your search is too long. Please make your search smaller and try again.
-#? ERROR_SEARCH_TOO_LARGE=Your search is too long. Please make your search smaller and try again.
+#? ERROR_SEARCH_TOO_LARGE=
 #### ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search smaller and try again.
-#? ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search smaller and try again.
+#? ERROR_XML_SEARCH_TOO_LARGE=
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
@@ -1882,7 +1882,7 @@ OPTIONS_PLAYER_MAIN_TITLE=Reproductor
 #### OPTIONS_ITUNES_MAIN_TITLE=iTunes
 OPTIONS_ITUNES_MAIN_TITLE=iTunes
 #### OPTIONS_ITUNES_PREFERENCE_MAIN_TITLE=Importing
-#? OPTIONS_ITUNES_PREFERENCE_MAIN_TITLE=Importing
+#? OPTIONS_ITUNES_PREFERENCE_MAIN_TITLE=
 #### OPTIONS_ITUNES_DAAP_MAIN_TITLE=Sharing
 OPTIONS_ITUNES_DAAP_MAIN_TITLE=Compartir
 #### OPTIONS_APPS_MAIN_TITLE=Helper Apps
@@ -2191,20 +2191,20 @@ OPTIONS_ITUNES_PREFERENCE_LABEL=Puede activar el soporte de iTunes (Mac OS X úni
 #### OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Sharing
 OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Compartir
 #### OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.\n\nEnable Compatability Mode if you experience problems with iTunes Sharing. This mode uses more resources and is slower, but may fix problems.
-#? OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.\n\nEnable Compatability Mode if you experience problems with iTunes Sharing. This mode uses more resources and is slower, but may fix problems.
+#? OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=
 #### OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my Music:
-#? OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my Music:
+#? OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=
 #### OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Shared name:
 OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Nombre de compartir:
 #### OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatability Mode
-#? OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatability Mode
+#? OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=
 
 #### OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Require password
-#? OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Require password
+#? OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=
 #### OPTIONS_ITUNES_DAAP_PASSWORD_LABEL=You can limit the access to this service with a password.
-#? OPTIONS_ITUNES_DAAP_PASSWORD_LABEL=You can limit the access to this service with a password.
+#? OPTIONS_ITUNES_DAAP_PASSWORD_LABEL=
 #### OPTIONS_ITUNES_DAAP_PASSWORD_CHECKBOX_LABEL=Require password:
-#? OPTIONS_ITUNES_DAAP_PASSWORD_CHECKBOX_LABEL=Require password:
+#? OPTIONS_ITUNES_DAAP_PASSWORD_CHECKBOX_LABEL=
 #### OPTIONS_ITUNES_DAAP_PASSWORD_TEXTFIELD_LABEL=Password:
 OPTIONS_ITUNES_DAAP_PASSWORD_TEXTFIELD_LABEL=Contraseña:
 
@@ -2722,9 +2722,9 @@ STATS_QUERY_REQUEST_TTL_TITLE=TTL
 STATS_QUERY_REQUEST_TTL_LABEL=Todas las consultas recibidas, por tiempo de vida (TTL).
 # Advanced Gnutella Message Special queries
 #### STATS_SPECIAL_QUERIES_TITLE=Special Queries
-#? STATS_SPECIAL_QUERIES_TITLE=Special Queries
+#? STATS_SPECIAL_QUERIES_TITLE=
 #### STATS_SPECIAL_QUERIES_LABEL=All of the special marked queries.
-#? STATS_SPECIAL_QUERIES_LABEL=All of the special marked queries.
+#? STATS_SPECIAL_QUERIES_LABEL=
 # Advanced Gnutella Message hops/ttl for query hits
 #### STATS_QUERY_REPLY_HOPS_TITLE=Hops
 STATS_QUERY_REPLY_HOPS_TITLE=Saltos
@@ -3876,7 +3876,7 @@ UP_OUTGOING_REJECT_FULL=Rechazo saliente (Completo)
 #### UP_OUTGOING_GUIDANCE_FOLLOWED=Out Acc. (Followed Guidance)
 UP_OUTGOING_GUIDANCE_FOLLOWED=Aceptación saliente (guía ignorada)
 #### UP_OUTGOING_GUIDANCE_IGNORED=Out Acc. (Ignored Guidance)
-#? UP_OUTGOING_GUIDANCE_IGNORED=Out Acc. (Ignored Guidance)
+#? UP_OUTGOING_GUIDANCE_IGNORED=
 #### UP_OUTGOING_ACCEPT=Out Acc. (No Guidance)
 UP_OUTGOING_ACCEPT=Aceptación saliente (sin guía)
 #### UP_INCOMING_REJECT_LEAF=In Rej. (Leaf)
