--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -835,9 +835,9 @@ STATISTICS_CONNECTION_QUALITY=Qualité\u00a0:
 #### STATISTICS_CONNECTION_IDLE=Idle
 STATISTICS_CONNECTION_IDLE=Inactif
 #### STATISTICS_CONNECTION_WAKING_UP=Waking Up
-#? STATISTICS_CONNECTION_WAKING_UP=Waking Up
+#? STATISTICS_CONNECTION_WAKING_UP=
 #### STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
-#? STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
+#? STATISTICS_CONNECTION_WAKING_UP_TIP=
 
 ################################################################################
 # Key/value pairs for the download window, including labels for the
