--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -740,13 +740,19 @@ INIT_SAVE_DEFAULT_BUTTON_TIP=Use the Default Directory
 ################################################################################
 PRO_TITLE=Upgrade to PRO
 PRO_LABEL_THANKS=For TURBOcharged downloads, get LimeWire PRO. We guarantee that you will love the improved performance of PRO. Thank you for helping keep the Internet open by running LimeWire.
-
 PRO_LABEL_QUESTION=Upgrade to LimeWire PRO?
 GO_PRO_TIP=Get LimeWire PRO Now
 WHYGOPRO=Why
 WHYGOPRO_TIP=What does PRO give me?
 GO_PRO_LATER=Later
 GO_PRO_LATER_TIP=Get LimeWire PRO Later
+
+################################################################################
+# Key/Value pairs for the upgrade java window.
+################################################################################
+JAVA_UPGRADE_TITLE=Upgrade Your Java
+JAVA_UPGRADE_MESSAGE=LimeWire has detected that you are using an out-of-date version of Java.  LimeWire looks and acts much better with newer versions of Java.  Features include support for scroll-wheels on mice, a Windows XP look, and many other improvements.
+JAVA_UPGRADE_QUESTION=Would you like to get your free Java upgrade?
 
 ###################################################################
 # Key/value pairs for XML
