verify before blocking hosts.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -374,6 +374,7 @@ SEARCH_WHATS_NEW_SMALL=New
 SEARCH_SELECT_TYPE=Select Type:
 SEARCH_FILTER_RESULTS=Filter Results:
 SEARCH_BACK_TO_SEARCH=Back To Search
+SEARCH_BLOCK_HOST=Do you want to block search results from the host at
 
 #Media Types
 MEDIA_ANY_TYPE=Any Type
