message for asking if the user wants to save on exit of options.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1123,6 +1123,7 @@ OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=Country
 # Key/value pairs for the save directory options window item
 # in the options window
 ################################################################################
+OPTIONS_SAVE_ON_CLOSE=You have made changes to some settings.  Would you like to save these changes?
 OPTIONS_SAVE_DIR_TITLE=Save Directory
 OPTIONS_SAVE_DIR_LABEL=You can choose the directory for saving files.
 OPTIONS_SAVE_DIR_BOX_LABEL=Directory:
